--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,18 +1,19 @@
 // Options
 // =====
 // Quickly modify global styling by enabling or disabling optional features.
-$enable-rounded:            true !default;      // true
-$enable-shadows:            false !default;     // false
-$enable-transitions:        true !default;      // true
-$enable-grid-classes:       true !default;      // true
-$enable-print-styles:       true !default;      // true
-$enable-palette:            true !default;      // true
-$enable-sizing:             true !default;      // true
-$enable-bp-smallest:        false !default;     // false
-$enable-rfs-fluid:          false !default;     // false
-$enable-rfs-scale:          false !default;     // false
-$enable-color-warnings:     false !default;     // false
-$enable-validation-icons:   true !default;      // true
+$enable-rounded:                true !default;      // true
+$enable-shadows:                false !default;     // false
+$enable-transitions:            true !default;      // true
+$enable-transitions-reduced:    true !default;      // true
+$enable-grid-classes:           true !default;      // true
+$enable-print-styles:           true !default;      // true
+$enable-palette:                true !default;      // true
+$enable-sizing:                 true !default;      // true
+$enable-bp-smallest:            false !default;     // false
+$enable-rfs-fluid:              false !default;     // false
+$enable-rfs-scale:              false !default;     // false
+$enable-color-warnings:         false !default;     // false
+$enable-validation-icons:       true !default;      // true
 
 
 // Palette
