--- a/scss/functions/_color-util.scss
+++ b/scss/functions/_color-util.scss
@@ -80,14 +80,11 @@
 
 // Get color with hopefully minimum contrast ratio against a given one
 // based on the minimum contrast ratio setting.
-@function color-contrast($color) {
-    $color-light: $color-contrast-base-light;
-    $color-dark: $color-contrast-base-dark;
-
-    @if (color-get-contrast-ratio($color-light, $color) <= $color-contrast-min-ratio) {
-        @return $color-dark;
+@function color-contrast($color, $light: $color-contrast-base-light, $dark: $color-contrast-base-dark) {
+    @if (color-get-contrast-ratio($light, $color) <= $color-contrast-min-ratio) {
+        @return $dark;
     }
-    @return $color-light;
+    @return $light;
 }
 
 // Get color with maximum contrast against the given one.
@@ -102,8 +99,8 @@
 
 // Check to see if standard contrast function meets the minimum contrast
 // ratio, otherwise get the max contrast.
-@function color-auto-contrast($color) {
-    $colorauto: color-contrast($color);
+@function color-auto-contrast($color, $light: $color-contrast-base-light, $dark: $color-contrast-base-dark) {
+    $colorauto: color-contrast($color, $light, $dark);
     @if (color-get-contrast-ratio($colorauto, $color) >= $color-contrast-min-ratio) {
         @return $colorauto;
     }
@@ -116,14 +113,14 @@
 
 // Check to see if a color meets minimum contrast ratio and use it,
 // otherwise get the best color contrast possible.
-@function color-if-contrast($colorfore, $colorback) {
+@function color-if-contrast($colorfore, $colorback, $light: $color-contrast-base-light, $dark: $color-contrast-base-dark) {
     @if (color-get-contrast-ratio($colorfore, $colorback) >= $color-contrast-min-ratio) {
         @return $colorfore;
     }
     @if $enable-color-warnings {
-        @warn "Foreground color (#{$colorfore}) does not meet the defined minimum contrast ratio (#{$color-contrast-min-ratio}:1) against the background color (#{$colorback})! Now auto-selecting a color with minimum contrast.";
+        @warn "Foreground color (#{$colorfore}) does not meet the defined minimum contrast ratio (#{$color-contrast-min-ratio}:1) against the background color (#{$colorback})! Now auto-selecting a color that should meet minimum contrast.";
     }
-    @return color-auto-contrast($colorback);
+    @return color-auto-contrast($colorback, $light, $dark);
 }
 
 // =====
