--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -8,12 +8,16 @@
         touch-action: none;
         opacity: $drag-opacity;
 
+        // Override anchor styling
+        @include hover-focus() {
+            color: inherit;
+            text-decoration: none;
+        }
+
         &:not(:disabled):not(.disabled) {
             cursor: move;
 
             @include hover-focus() {
-                color: inherit;
-                text-decoration: none;
                 opacity: $drag-hover-opacity;
             }
         }
@@ -23,12 +27,17 @@
     // iOS requires the button element instead of an anchor tag.
     // If you want the anchor version, it requires `href="#"`.
     // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
-
     // stylelint-disable-next-line selector-no-qualifying-type
     button.drag {
         padding: 0;
         background-color: transparent;
         border: 0;
         appearance: none;
+    }
+
+    // Future-proof disabling of clicks on `<a>` elements
+    // stylelint-disable-next-line selector-no-qualifying-type
+    a.drag.disabled {
+        pointer-events: none;
     }
 }
