--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -18,11 +18,11 @@
     .modal {
         position: fixed;
         top: 0;
-        right: 0;
-        bottom: 0;
         left: 0;
         z-index: $zindex-modal;
         display: none;
+        width: 100%;
+        height: 100%;
         overflow: hidden;
         direction: ltr #{"/*rtl:ignore*/"};
         // Prevent Chrome on Windows from adding a focus outline. For details, see
@@ -96,10 +96,10 @@
     .modal-backdrop {
         position: fixed;
         top: 0;
-        right: 0;
-        bottom: 0;
         left: 0;
         z-index: $zindex-modal-backdrop;
+        width: 100vw;
+        height: 100vh;
         background-color: $modal-backdrop-bg;
 
         // Fade for backdrop
