--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -347,7 +347,7 @@ $custom-file-text: (
     .cf-example {
         overflow: auto;
     }
-    > div div {
+    div {
         background-color: rgba(34, 68, 102, .05);
         border: $border-width solid rgba(34, 68, 102, .2);
     }
