Use utils for container and tabResponsive examples

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -35,7 +35,7 @@
             </main>
         </div>
 
-        <div class="topLink">
+        <div class="toplink">
             <a href="#content">Top of Page <span class="caret"></span></a>
         </div>
     </div>
