--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -601,37 +601,41 @@ $callout-themes: _mix-context-colors($callout-colors, $level-context);
 }
 
 // Top of page item
-.topLink a {
-    display: inline-block;
-    padding: .15rem .5rem;
-    @include font-size(.875rem);
-    color: #c3c3c3;
-    text-decoration: none;
-    white-space: nowrap;
-    background: #424242;
-    border-radius: .5rem .5rem 0 0;
-}
-.topLink a:hover,
-.topLink a:focus {
-    color: #fff;
-}
-.topLink .caret {
-    &::after {
-        border-top: 0;
-        border-bottom: $caret-border-width solid;
+.toplink {
+    a {
+        display: inline-block;
+        padding: .15rem .5rem;
+        @include font-size(.875rem);
+        color: #c3c3c3;
+        text-decoration: none;
+        white-space: nowrap;
+        background: #424242;
+        border-radius: .5rem .5rem 0 0;
+
+        @include hover-focus() {
+            color: #fff;
+        }
     }
-}
-.topLink.affix-top,
-.topLink.affix {
-    position: fixed;
-    bottom: 0;
-    backface-visibility: hidden;
-}
-.topLink.affix-top {
-    visibility: hidden;
-}
-.topLink.affix-bottom {
-    position: absolute;
+
+    .caret {
+        &::after {
+            border-top: 0;
+            border-bottom: $caret-border-width solid;
+        }
+    }
+
+    &.affix-top,
+    &.affix {
+        position: fixed;
+        bottom: 0;
+        backface-visibility: hidden;
+    }
+    &.affix-top {
+        visibility: hidden;
+    }
+    &.affix-bottom {
+        position: absolute;
+    }
 }
 
 // Feed
