--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -60,7 +60,7 @@ section {
 //
 // 1. Remove the margin in all browsers.
 // 2. As a best practice, apply a default `background-color`.
-// 3. Set an explicit initial text-align value so that we can later use the
+// 3. Set an explicit initial text-align value so that we can later use
 //    the `inherit` value on things like `<th>` elements.
 body {
     margin: 0; // 1
