--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -16,8 +16,8 @@
 // 2. Change the default font family in all browsers.
 // 3. Correct the line height in all browsers.
 // 4. Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.
-// 5. Setting @viewport causes scrollbars to overlap content in IE11 and Edge, so
-//    we force a non-overlapping, non-auto-hiding scrollbar to counteract.
+// 5. Change the default tap highlight to be completely transparent in iOS.
+
 *,
 *::before,
 *::after {
@@ -28,17 +28,8 @@ html {
     font-family: sans-serif; // 2
     line-height: 1.15; // 3
     -webkit-text-size-adjust: 100%; // 4
-    -ms-overflow-style: scrollbar; // 5
+    -webkit-tap-highlight-color: rgba($black, 0); // 5
 }
-
-// IE10+ doesn't honor `<meta name="viewport">` in some cases.
-// stylelint-disable at-rule-no-vendor-prefix
-@at-root {
-    @-ms-viewport {
-        width: device-width;
-    }
-}
-// stylelint-enable at-rule-no-vendor-prefix
 
 // Shim for "new" HTML5 structural elements to display correctly (IE10, older browsers)
 article,
@@ -251,9 +242,6 @@ pre {
     margin-top: 0; // Remove browser default top margin
     margin-bottom: 1rem; // Reset browser default of `1em` to use `rem`s
     overflow: auto; // Don't allow content to break outside
-    // We have @viewport set which causes scrollbars to overlap content in IE11 and Edge, so
-    // we force a non-overlapping, non-auto-hiding scrollbar to counteract.
-    -ms-overflow-style: scrollbar;
 }
 
 
