don't shrink check/radio inputs on Chrome/Linux

--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -361,6 +361,7 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
                     }
                     .form-check-input {
                         position: relative;
+                        flex-shrink: 0;
                         margin-top: 0;
                         margin-right: $form-check-input-margin-x;
                         margin-left: 0;
