--- a/scss/core/_code.scss
+++ b/scss/core/_code.scss
@@ -42,7 +42,7 @@
                 font-size: inherit;
                 color: inherit;
                 background-color: transparent;
-                border-radius: 0;
+                @include border-radius(0);
             }
         }
     }
