--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -299,6 +299,7 @@ label {
 // Remove the default `border-radius` that macOS Chrome adds.
 // Details at https://github.com/twbs/bootstrap/issues/24093
 button {
+    // stylelint-disable-next-line property-blacklist
     border-radius: 0;
 }
 
