--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -129,7 +129,7 @@
     margin: 0;
     color: #222;
     background-color: #fff;
-    border-radius: .25rem;
+    @include border-radius(.25rem);
 
     .col-md-6 {
         padding-right: 0;
@@ -202,7 +202,7 @@
     margin-bottom: 20px;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
-    border-radius: 4px;
+    @include border-radius(.25rem);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 .player-transcript-active {
@@ -240,6 +240,7 @@
     pointer-events: none;
     content: "\f144";
     background-color: #000;
+    // stylelint-disable-next-line property-blacklist
     border-radius: 50%;
     opacity: .75;
     transform: translate3d(-50%, -50%, 0);
@@ -290,7 +291,7 @@
     color: #fff;
     text-align: center;
     background-color: rgba(0, 0, 0, .65);
-    border-radius: .25rem;
+    @include border-radius(.25rem);
     transform: translateX(-50%);
 }
 .player-fulldisplay .player-caption-display {
