--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -22,13 +22,8 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
             border: $input-border-width solid $input-border-color;
 
             // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-            @if $enable-rounded {
-                // Manually use the if/else instead of the mixin to account for iOS override
-                border-radius: $input-border-radius;
-            } @else {
-                // Otherwise undo the iOS default
-                border-radius: 0;
-            }
+            // Provide a fallback to override to the iOS default
+            @include border-radius($input-border-radius, 0);
 
             @include box-shadow($input-box-shadow);
             @include transition($input-transition);
