--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -121,10 +121,6 @@
     padding: $padding-y $padding-x;
     @include font-size($font-size);
     line-height: $line-height;
-    // Manually declare to provide an override to the browser default
-    @if $enable-rounded {
-        border-radius: $border-radius;
-    } @else {
-        border-radius: 0;
-    }
+    // Provide a fallback to override to the browser default
+    @include border-radius($border-radius, 0);
 }
