--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -5,6 +5,7 @@
 @import "utilities/flex";
 @import "utilities/float";
 @import "utilities/border";
+@import "utilities/overflow";
 @import "utilities/position";
 @import "utilities/screen-reader";
 @import "utilities/shadow";
