--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -6,24 +6,14 @@
         $bprule: breakpoint-designator($breakpoint);
 
         @include media-breakpoint-up($breakpoint) {
-            @if $enable-utility-position-common {
-                .position#{$bprule}-static   { position: static !important; }
-                .position#{$bprule}-relative { position: relative !important; }
-                .position#{$bprule}-absolute { position: absolute !important; }
-            }
-            @if $enable-utility-position-fixed {
-                .position#{$bprule}-fixed    { position: fixed !important; }
-            }
-            @if $enable-utility-position-sticky {
-                @supports (position: sticky) {
-                    .position#{$bprule}-sticky   { position: sticky !important; }
-                }
+            @each $value in $utility-position {
+                .position#{$bprule}-#{$value} { position: $value !important; }
             }
         }
     }
 
     // Quick use
-    @if $enable-utility-position-fixed and $enable-utility-position-fixed-top {
+    @if $enable-utility-position-fixed-top {
         .fixed-top {
             position: fixed;
             top: 0;
@@ -32,7 +22,7 @@
             z-index: $zindex-fixed;
         }
     }
-    @if $enable-utility-position-fixed and $enable-utility-position-fixed-bottom {
+    @if $enable-utility-position-fixed-bottom {
         .fixed-bottom {
             position: fixed;
             right: 0;
@@ -42,7 +32,7 @@
         }
     }
 
-    @if $enable-utility-position-sticky and $enable-utility-position-sticky-top {
+    @if $enable-utility-position-sticky-top {
         @supports (position: sticky) {
             .sticky-top {
                 position: sticky;
