--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -419,7 +419,7 @@ h4 > code {
   padding: 1rem;
   background-color: #fff;
   border: 1px solid #e1e1e8;
-  border-radius: .25rem .25rem 0 0;
+  border-radius: 0.25rem 0.25rem 0 0;
 }
 
 .cf-example + .cf-clipboard + .highlight {
@@ -452,7 +452,7 @@ h4 > code {
   color: #393939;
   background-color: #f8f8f8;
   border: 1px solid #e1e1e8;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .highlight pre {
@@ -595,7 +595,7 @@ h4 > code {
   text-decoration: none;
   white-space: nowrap;
   background: #424242;
-  border-radius: .5rem .5rem 0 0;
+  border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .toplink a:hover, .toplink a:focus {
@@ -1517,7 +1517,7 @@ h4 > code {
   font-weight: 700;
   line-height: 1.1;
   text-align: center;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .visible-on .col-6 > .not-visible,
@@ -1719,7 +1719,7 @@ h4 > code {
   margin: 0;
   color: #222;
   background-color: #fff;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .player-fulldisplay .player .col-md-6 {
@@ -1814,7 +1814,7 @@ h4 > code {
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
@@ -1929,7 +1929,7 @@ h4 > code {
   color: #fff;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.65);
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
 }
