--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -124,6 +124,37 @@ $custom-file-text: (
     }
 }
 
+// Accordion Cards
+.accordion {
+    > .card {
+        overflow: hidden;
+
+        &:not(:first-of-type) {
+            .card-header:first-child {
+                @include border-radius(0);
+            }
+
+            &:not(:last-of-type) {
+                border-bottom: 0;
+                @include border-radius(0);
+            }
+        }
+
+        &:first-of-type {
+            border-bottom: 0;
+            @include border-bottom-radius(0);
+        }
+
+        &:last-of-type {
+            @include border-top-radius(0);
+        }
+
+        .card-header {
+            margin-bottom: -$card-border-width;
+        }
+    }
+}
+
 // Navbar
 .cf-example .fixed-top,
 .cf-example .sticky-top {
