use jekyll twitter var

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -10,7 +10,7 @@
             <li><a href="{{ site.baseurl }}/about/overview/">About</a></li>
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
-            <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
+            <li><a href="{{ site.twitter }}">Twitter</a></li>
         </ul>
         <p>
             &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/">CAST, Inc.</a>
