Remove screen from transition mixin

--- a/scss/mixins/_transition.scss
+++ b/scss/mixins/_transition.scss
@@ -4,7 +4,7 @@
         transition: $transition;
 
         @if $enable-transitions-reduced {
-            @media screen and (prefers-reduced-motion: reduce) {
+            @media (prefers-reduced-motion: reduce) {
                 transition: none;
             }
         }
