--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -815,6 +815,22 @@ $form-feedback-icon-valid-image:    str-replace(url("data:image/svg+xml,%3csvg x
 $form-feedback-icon-invalid-color:  $form-feedback-invalid-color !default;
 $form-feedback-icon-invalid-image:  str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='#{palette($danger, 500)}' viewBox='-2 -2 7 7'%3e%3cpath stroke='#{$form-feedback-icon-invalid-color}' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3e"), "#", "%23") !default;
 
+$form-validation-states: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$form-validation-states: map-merge(
+    (
+        "valid": (
+            "color": $form-feedback-valid-color,
+            "icon": $form-feedback-icon-valid-image
+        ),
+        "invalid": (
+            "color": $form-feedback-invalid-color,
+            "icon": $form-feedback-icon-invalid-image
+        ),
+    ),
+    $form-validation-states
+);
+
 
 // Input group
 // =====
