--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -3,7 +3,7 @@
     .table {
         width: 100%;
         margin-bottom: $table-margin-bottom;
-        background-color: $table-bg; // Reset for nesting within parents with `background-color`.
+        background-color: $table-bg;
         border: 0 solid;
         border-color: $table-border-color;
 
